# python2binary

./: .gitignore  LICENSE  README.md  __init__.py  main.py  pipeline.py  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
infrastructure/: compiler.py  converter.py  packager.py
interfaces/: interfaces.py
schemas/: schemas.py
